--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
             <a class="navbar-brand bold" href="#">ISTE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -41,9 +38,12 @@
                 </li>
                 </ul>
             </div class="nav-logo">
-            <img src="favicon-32x32.png"  alt="iste">
-            <img src="gmit32.png"  alt="gmit">
-            <img src="cse32.png"  alt="cse">
+                <img src="gmit32.png"  alt="gmit">
+                <img src="cse32.png"  alt="cse">
+                <img src="favicon-32x32.png"  alt="iste">
+                <button class="navbar-toggler btn-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             </div>
         </nav>
         <h1 class="h bold head">17<sup>th</sup> KARNATAKA STATE LEVEL ISTE STUDENT CONVENTION</h1>
