--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
         <h1 class="h bold head">17<sup>th</sup> KARNATAKA STATE LEVEL ISTE STUDENT CONVENTION</h1>
-        <marquee scrolldelay="10" class="marque">Note: Venue and Timings will be updated shortly.</marquee>
+        <marquee scrolldelay="10" class="marque">Note: Timings will be updated shortly.</marquee>
         <div class="e2" id="pp">
             <br>
             <h1 class="h bold">Paper Presentation</h1>
@@ -72,6 +72,7 @@
             <div>
                 <a href="presentation_slide.pdf" class="ieee"><strong>Presentation Template</strong></a>
             </div>
+            <p class="venue">Venue : GMIT Central Library</p>    
             </div>
         </div>
         <hr>
@@ -101,10 +102,9 @@
                         <li>Contestants need not carry their laptops for this event.</li>
                     </ul> 
                 </div>
+                <p class="venue">Venue : Windows Lab, GMIT</p>
             </div>
             </div>
-            <p>   </p>
-            <p>   </p>
         </div>
         <hr>
         <div class="e1" id="pm">
@@ -144,6 +144,7 @@
                         <li>The contestants will be graded upon their idea, stratergy, etc..</li>
                     </ul> 
                 </div>
+                <p class="venue">Venue : IDT Lab, GMIT</p>
             </div>
             </div>
         </div>
