--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             <div>
                 <a href="presentation_slide.pdf" class="ieee"><strong>Presentation Template</strong></a>
             </div>
-            <p class="venue">Venue : GMIT Central Library</p>    
+                <p class="venue">Venue : GMIT Central Library</p>
+                <p class="venue">Timing : 12pm to 1pm</p>
             </div>
         </div>
         <hr>
@@ -103,6 +104,7 @@
                     </ul> 
                 </div>
                 <p class="venue">Venue : Windows Lab, GMIT</p>
+                <p class="venue">Timing : 2pm</p>
             </div>
             </div>
         </div>
@@ -145,6 +147,7 @@
                     </ul> 
                 </div>
                 <p class="venue">Venue : IDT Lab, GMIT</p>
+                <p class="venue">Timing : 3pm</p>
             </div>
             </div>
         </div>
