--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div>
                 <a href="presentation_slide.pdf" class="ieee"><strong>Presentation Template</strong></a>
             </div>
-                <p class="venue">Venue : GMIT Central Library</p>
+                <p class="venue">Venue : MBA Auditorium, GMIT</p>
                 <p class="venue">Timing : 12pm to 1pm</p>
             </div>
         </div>
