--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </nav>
         <h1 class="h bold head">17<sup>th</sup> KARNATAKA STATE LEVEL ISTE STUDENT CONVENTION</h1>
-        <marquee scrolldelay="10" class="marque">Note : Contestants participating in Paper Presentation should get 2 hard copies of their papers.</marquee>
+<!--         <marquee scrolldelay="10" class="marque">Note : Contestants participating in Paper Presentation should get 2 hard copies of their papers.</marquee> -->
         <div class="e2" id="pp">
             <br>
             <h1 class="h bold">Paper Presentation</h1>
@@ -73,6 +73,7 @@
                 <a href="presentation_slide.pdf" class="ieee"><strong>Presentation Template</strong></a>
             </div>
                 <p class="venue">Venue : MBA Auditorium, GMIT</p>
+                <br>
                 <p class="venue">Timing : 12pm to 1pm</p>
             </div>
         </div>
