--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
             <div>
                 <a href="presentation_slide.pdf" class="ieee"><strong>Presentation Template</strong></a>
             </div>
+            <div>
                 <p class="venue">Venue : MBA Auditorium, GMIT</p>
-                <br>
+            </div>
+            <div>
                 <p class="venue">Timing : 12pm to 1pm</p>
+            </div>
             </div>
         </div>
         <hr>
